# tender_ai_assistant

./: .pre-commit-config.yaml  Home.py  README.md  app.py  pyproject.toml
app_core/: resources.py
notebook/: generating_vector_db.ipynb  parsing.ipynb
pages/: 1_Tender_Requirement_Extractor.py  2_BoM_and_BoQ_Generator.py
src/: prompt_template.py  rag_pipeline.py
src/module/: chunking.py  constants.py  generation.py  parsing.py  retrieval.py  utils.py
